--- a/client/styles/_Base.scss
+++ b/client/styles/_Base.scss
@@ -4,3 +4,10 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
 }
+
+.main-container {
+  width: 1000px;
+  min-height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
